tests/e2e/unary_complex_5.story
url = "foobar"
a = not (not (http fetch url:url)) or not (random boolean)
